<resources>
    <string name="app_name">JokeApp</string>
    <string name="action_settings">Settings</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_list">ListActivity</string>
    <string name="title_jokes_list">Jokes List</string>
    <string name="category">Category: </string>
    <string name="any">Any</string>
    <string name="custom">Custom</string>
    <string name="joke_type">Joke type: </string>
    <string name="amount">Amount: </string>
    <string name="single">single</string>
    <string name="twopart">twopart</string>
    <string name="hint_amount">Enter no between 1-10</string>

</resources>