<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/margin_10"
    tools:context=".view.MainActivity">

    <RelativeLayout
        android:id="@+id/layoutOuter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin_5"
        android:background="@drawable/rectangle_shape_white_black_border">

    <LinearLayout
        android:id="@+id/layoutCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="10"
        android:orientation="horizontal"
        android:layout_alignParentTop="true"
        >
        <RelativeLayout
            android:layout_weight="3"
            android:layout_width="0dp"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_size_16sp"
                android:text="@string/category"
                android:layout_centerInParent="true"/>
        </RelativeLayout>
        <LinearLayout
            android:layout_weight="7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <RadioButton
                    android:id="@+id/RBAny"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:text="@string/any"/>
                <RadioButton
                    android:id="@+id/RBCustom"
                    android:layout_width="wrap_content"
                    android:textColor="@android:color/black"
                    android:layout_height="wrap_content"
                    android:text="@string/custom"/>
            </RadioGroup>

        </LinearLayout>
    </LinearLayout>
<View
    android:id="@+id/line1"
    android:layout_width="match_parent"
    android:background="#25221e"
    android:layout_below="@+id/layoutCategory"
    android:layout_height="@dimen/margin_1"/>
        <LinearLayout
            android:id="@+id/layoutJokeType"
            android:weightSum="10"
            android:layout_below="@+id/line1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RelativeLayout
                android:layout_weight="3"
                android:layout_width="0dp"
                android:layout_height="match_parent">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/text_size_16sp"
                    android:text="@string/joke_type"
                    android:layout_centerInParent="true"/>
            </RelativeLayout>
            <LinearLayout
                android:layout_weight="7"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <CheckBox
                    android:id="@+id/checkboxSingle"
                    android:text="@string/single"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <CheckBox
                    android:id="@+id/checkboxTwopart"
                    android:text="@string/twopart"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>
        </LinearLayout>
        <View
            android:id="@+id/line2"
            android:layout_width="match_parent"
            android:background="#25221e"
            android:layout_below="@+id/layoutJokeType"
            android:layout_height="@dimen/margin_1"/>
        <LinearLayout
            android:id="@+id/layoutAmount"
            android:weightSum="10"
            android:layout_below="@+id/line2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/margin_5"
            android:paddingBottom="@dimen/margin_5"
            android:orientation="horizontal">
            <RelativeLayout
                android:layout_weight="3"
                android:layout_width="0dp"
                android:layout_height="match_parent">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/text_size_16sp"
                    android:text="@string/amount"
                    android:layout_centerInParent="true"/>
            </RelativeLayout>
         <!-- <EditText
              android:id="@+id/editAmount"
              android:layout_width="0dp"
              android:layout_height="wrap_content"
              android:gravity="center"
              android:layout_weight="5"
              android:inputType="number"
              android:digits="2"
              android:hint="@string/hint_amount"
              android:text="1"/>-->
            <Spinner
                android:id="@+id/spinnerAmount"
                android:layout_width="0dp"
                android:layout_weight="5"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </RelativeLayout>

    <Button
        android:id="@+id/searchButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layoutOuter"
        android:layout_margin="@dimen/margin_10"
        android:background="@drawable/rectangle_shape"
        android:text="Search"
        android:textColor="@android:color/white" />

</RelativeLayout>